# django-cloudrun-job

./: .gitignore  README.md  pyproject.toml
src/django_cloudrun_job/: __init__.py  apps.py  conf.py  runner.py
src/django_cloudrun_job/management/commands/: run_remote.py
